Fully Justify + Revision upto Grace Period
Left-align made reading awkware, esp on mobile. This allows for better readability. Doesn't break the site.

Revised text upto Grace Period. Should be more succint and consistent now.

--- a/index.html
+++ b/index.html
@@ -143,37 +143,33 @@
           <br>
           <!--<p class="blog-post-meta">January 1, 2014 by <a href="#">Mark</a></p>-->
           <p>The Ontario Student Assistant Program (OSAP) provides funds to students needing financial assistance for
-            their post secondary education. The funding is made up of 3 parts: two of which are grants that do not need
-            to be repaid and one of which is a loan that will need to be repaid at a later date. The grants include: The
-            <strong>Ontario student grant</strong> and The <strong>Canada student grant for full time students</strong>,
-            whereas the loan is composed of a <strong>Canada - Ontario integrated student loan</strong>.</p>
-          <p>It is important to keep in mind that the loan portion is an integrated provincial and federal loan. They
-            are two independent components of the loan, each with its own properties. Later we will discuss how
-            different rules apply to both of them separately.</p>
-          <p><strong>Grants</strong> are essentially free money provided by the government to reduce the overall loans
-            on students. Students do not need to repay grants. <strong>Loans</strong> are NOT FREE money. All loans will
-            need to be paid off at an eventual date.</p>
-          <p><strong>Pro-Tip:</strong> Use extra grants/ scholarships/ bursaries that are left over after educational
-            expenses to pay off loans as soon as possible.</p>
-          <p>During the life of a student, they are put within three categories depending on their current status.</p>
+            their post secondary education. The funding is made up of three parts, two of which are grants and one of which is a loan.</p>
+			
+			<p><strong>Grants</strong> are essentially free money provided by the government to reduce the overall loans on students. Students do not need to repay grants. The grants include the <strong>Ontario student grant</strong> and the <strong>Canada student grant for full time students</strong>.</p>
+			
+			<p><strong>Loans</strong> are NOT FREE money. All loans will need to be paid off at an eventual date. The loan is composed of a <strong>Canada - Ontario integrated student loan</strong>.</p>
+
+          <p>It is important to keep in mind that the loan portion of funding is an integrated <i>provincial</i> and <i>federal</i> loan. They are two independent components of the loan, each with its own properties. Later, we will discuss how
+            different rules apply to both of them, separately.</p>
+          
+          <p><i>Pro-Tip: Use extra grants/scholarships/bursaries that are left over after educational expenses to pay off loans as soon as possible.</i></p>
+          <p>A student always has one of the three following statuses:</p>
           <ol>
-            <li>The <strong><em>In-Study</em></strong> category is defined as when a student is currently in school
-              pursuing education. In this stage, students <strong>are not required to make any payments and DO NOT
-                accumulate any interest</strong> on outstanding loans, provided enrollment is confirmed every year.</li>
-            <li>The <strong><em>Non-Repayment</em></strong> category is known as a “grace period” and occurs when the
-              student is no longer within the <em>In-Study</em> period, lasting 6 months after <em>In-Study</em> status
-              ends. In this stage, the student <strong>does not need to make any payments</strong> towards outstanding
-              loans, but, they <strong>do begin to accumulate interest</strong> on those loans. More details of this
-              phase are discussed below.</li>
-            <li>The <strong><em>Repayment</em></strong> category is when the <em>Non-Repayment</em> stage ends, and
-              students are mandated to begin paying off their loans.</li>
+            <li><strong>In-Study</strong>: when a student is currently enrolled at a post-secondary institution. 
+			Students are <strong>not required to make any payments and DO NOT accumulate any interest</strong> 
+			on outstanding loans, provided enrollment is confirmed every year.</li>
+            <li><strong>Non-Repayment</strong>: a period lasting 6 months after <em>In-Study</em> status ends. 
+			The student is  <strong>not expected to make any payments, but DO accumulate interest</strong> on 
+			oustanding loans. More details are discussed below. Also known as a “grace period”.</li>
+            <li><strong>Repayment</strong>: when the <em>Non-Repayment</em> stage ends, and
+              a student is <strong>expected to pay off oustanding loans</strong>.</li>
           </ol>
           <p><em>For more general information click <a href="https://www.ontario.ca/page/learn-about-osap"
                 target="_blank">here</a>.</em></p>
 
           <h4 id="second">Grace period: What is it?</h4>
-          <p>The <strong>Grace period</strong> is a 6-month period that begins after you graduate or leave school.
-            During this period, you are not required to start repaying your loan. However, what many students don’t
+          <p>A <strong>Grace period</strong> is a 6-month period that begins after you graduate or leave school.
+            During this period, you are not expected to start repaying your loan. However, what many students don’t
             realize is that during this period, <strong>interest starts to accumulate</strong><a
               href="https://www.ontario.ca/page/pay-back-osap" target="_blank"> (check "Pay back OSAP")</a>. Earlier, we
             mentioned to take note that the Ontario (provincial) and Canada (federal) components of the loans are
@@ -188,22 +184,29 @@
             interest would accrue on the federal portion but not the provincial portion. </p>
 
           <h4>Grace period: Forgiven Interest</h4>
-          <p>Many students think of the grace period as the six-month interest-free period that begins after graduation.
-            This is not entirely accurate. Post secondary students taking OSAP actually go through a grace period every
-            year without even knowing about it. Each year, a grace period is initiated on the last day of the last OSAP-funded term. For most students, this is usually the end of April, when they finish their
+		  <!--Text goes from third person to second. "You" should be avoided. Either re-work second person, or revise.-->
+          <p>If a student returns to school as a full-time student within the grace period (6 months) the accrued 
+		  interest will be forgiven.</p>
+			<!--Consider revising second person-->
+		  <p>Many students think of the grace period as the six-month interest-free period that begins after graduation.
+            This is not entirely accurate. Students taking OSAP typically go through a grace period every
+            year, often unbeknownst to them. Each year, a grace period is initiated on the last day of the last
+			OSAP-funded term. For most students, this is usually the end of April, when they finish their
             Winter semester. So, during summer break, if you are not taking any spring or summer courses, interest
             starts to accumulate (even if you are planning to return to school for the fall semester). However, when you
             actually return to school in September, the interest gets cleared. This is because the spring/summer term is
-            only 4 months, which is less than the maximum grace period of 6 months. By returning to school in September,
-            you return to the In-Study category. It is only if you do not decide to return to school for the fall
+            only 4 months, which is less than the maximum grace period of 6 months.</p>
+			<!--Consider revising second person-->
+			<p>By returning to school in September,
+			you return to the In-Study category. It is only if you do not decide to return to school for the fall
             semester that the interest will not be forgiven, and it will be added on to your outstanding loan. This is
             the case regardless of which term you are not in school. For example, if you take the winter semester off (4
             months) but return in the spring/summer semester as a full-time student, the same rule will apply to you.
             However, if you take the winter semester AND the spring/summer semester off (8 months) you will have accrued
             interest and will even be required to start repaying your loans after the 6-month mark. The only exception
             to the 6-month maximum is if you are registered in an approved co-op placement.</p>
-          <p>In short, if you return to school as a full-time student within the grace period (6 months) the accrued
-            interest will be forgiven.</p>
+
+          <!--To Continue revising from here-->
 
           <h4>Interest free status/switching to part-time studies</h4>
           <p>Once you take an OSAP loan for full-time studies, you are required to maintain full-time status or be
@@ -211,7 +214,9 @@
             long as you remain in the “In-Study Category”, you will not have to make any payments and interest will not
             accrue. If at any time you wish to either switch into part-time studies (take less than 60% of the course
             load per term) or take a period of time off from school for longer than 6 months, <strong>interest will
-              start to accumulate.</strong> If you haven't yet started your full-time studies you may consider starting off with a part-time OSAP loan to allow for more flexibility. Check the advices section below for more information. 
+              start to accumulate.</strong> If you haven't yet started your full-time studies you may consider starting
+			  off with a part-time OSAP loan to allow for more flexibility. Check the advices section below for more 
+			  information. 
               <p>To learn more about continuation of interest free status click <a href="https://osap.gov.on.ca/OSAPPortal/en/A-ZListofAid/PRDR019241.html" target="_blank">here.</a></p>
               <strong>Note:</strong> Generally, most universities allow engineering
             students to go on a long-term internship (more than 4 months) while remaining eligible for continuation of
